add mdx blog posts

--- a/blog/introductory-post.mdx
+++ b/blog/introductory-post.mdx
@@ -1,3 +1,18 @@
+---
+title: "Introductory blog"
+date: "2022-11-13"
+slug: "first-post"
+---
+
 # My Foray into functional programming
 
-I recently started Elliot's composing software. It's a book dedicated to teaching how to compose software as a software craftsman.
+I recently started Elliot's composing software.
+It's a book dedicated to teaching software composition as a software craftsman.
+
+I have heard about composing software a number of times. Mostly in relation to
+functional programming in Javascript. This time, Elliot takes a deep dive into
+the why and how of functional programming.
+
+## What I knew
+
+My knowledge used to be limited to just ...
