add proper path, update blog and update styling

--- a/blog/an-exploration-of-redux-toolkit.mdx
+++ b/blog/an-exploration-of-redux-toolkit.mdx
@@ -4,11 +4,16 @@ date: "2022-11-14"
 slug: "an-exploration-of-redux-toolkit"
 ---
 
-# Redux Toolkit: An exploration
+# Redux Toolkit: sigh & this is awesome
 
-I have never liked unnecessary complexity. It's either that, or the fact that
-complexity scares me. I believe that to be testament to the kind of values I hold
-especially regarding facing challenges.
+I have never liked unnecessary complexity.
+
+<br />
+
+It's either that, or the fact that complexity scares me. I believe that to be testament
+to the kind of values I hold especially regarding facing challenges.
+
+<br />
 
 Redux and Redux Toolkit have always looked daunting to me. I wondered why it was
 necessary and why I had to learn them. Truth be told, as much as I wanted to be
