--- a/blog/introductory-post.mdx
+++ b/blog/introductory-post.mdx
@@ -4,15 +4,8 @@ date: "2022-11-13"
 slug: "first-post"
 ---
 
-# My Foray into functional programming
+# Welcome to my First Post
 
-I recently started Elliot's composing software.
-It's a book dedicated to teaching software composition as a software craftsman.
+I built this site with GatsbyJS and MDX mostly to experiment with Gatsby.
 
-I have heard about composing software a number of times. Mostly in relation to
-functional programming in Javascript. This time, Elliot takes a deep dive into
-the why and how of functional programming.
-
-## What I knew
-
-My knowledge used to be limited to just ...
+I have a lot of thoughts. Some positive and others, negative.
